dataset1235/2025-2/610742602/users/1606503414/executions/2563853024_2403290319.log
== RUN (2025-09-02 20:43:26)
-- CODE: 
preco = float(input(digite o preço:))
quantidade = int(input(digite a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:21:31)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:14:41)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:42:10)
-- CODE: 
preco = float(input(insira o preço:))
quantidade = int(input(insira a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:13:55)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:17)
-- CODE: 
preco = float(input("digite o preço:"))
quantidade = int(input("digite a quantidade:"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preço:digite a quantidade:2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preço:digite a quantidade:55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preço:digite a quantidade:76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preço:digite a quantidade:40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preço:digite a quantidade:123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preço:digite a quantidade:91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:14:00)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:13:58)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:20:24)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:51)
-- CODE: 
preco = float(input(insira o preco:))
quantidade = int(input(insira a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:21:32)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:14:23)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:45:15)
-- CODE: 
preco = float(input("digite o preço:"))
quantidade = int(input("digite a quantidade:"))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preço:digite a quantidade:2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preço:digite a quantidade:55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preço:digite a quantidade:76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preço:digite a quantidade:40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preço:digite a quantidade:123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preço:digite a quantidade:91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:15:59)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:14:40)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:47:51)
-- CODE: 
preco = float(input("digite o preço:"))
quantidade = int(input("digite a quantidade:"))

custo_total = preco + quantidade  
print(122.5)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
digite o preço:digite a quantidade:122.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
digite o preço:digite a quantidade:122.5
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
digite o preço:digite a quantidade:122.5
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
digite o preço:digite a quantidade:122.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
digite o preço:digite a quantidade:122.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
digite o preço:digite a quantidade:122.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:43:24)
-- CODE: 
preco = float(input(digite o preço:))
quantidade = int(input(digite a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:13:57)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:14:01)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:14:24)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:42:11)
-- CODE: 
preco = float(input(insira o preço:))
quantidade = int(input(insira a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:16:01)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:53)
-- CODE: 
preco = float(input(insira o preco:))
quantidade = int(input(insira a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(insira o preco:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:43:25)
-- CODE: 
preco = float(input(digite o preço:))
quantidade = int(input(digite a quantidade:))

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
-- ERROR:
File "XXXX", line 1
    preco = float(input(digite o preço:))
                        ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:16:00)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:21:30)
-- CODE: 
preco = float(input())
quantidade = int(input())

custo_total = preco + quantidade  
print(custo_total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2432.50
1
---- correct output:
2432.5
---- user output:
2433.5
-- TEST CASE 2:
---- input:
45.0
10

---- correct output:
450.0
---- user output:
55.0
-- TEST CASE 3:
---- input:
66.2
10
---- correct output:
662.0
---- user output:
76.2
-- TEST CASE 4:
---- input:
38.5
2
---- correct output:
77.0
---- user output:
40.5
-- TEST CASE 5:
---- input:
122.5
1
---- correct output:
122.5
---- user output:
123.5
-- TEST CASE 6:
---- input:
87.5
4
---- correct output:
350.0
---- user output:
91.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
